--- a/contato.html
+++ b/contato.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulário de Contato</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
 </head>
 <body>
     <header>
         <h1>Formulário De Contato</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
               </ul>
         </nav>
     </header>
-    <main>
+    <main id="main_contato">
         <article id="conteudo_formulario">
             <div class="contato">
                 <section id="formulario">
+                    <aside id="lateral"></aside>
                     <h2>Contato</h2>
                     <fieldset>
                         <legend>Fale Conosco</legend>
                         <form>
                             <label for="nome">Nome:</label>
                             <input type="text" id="nome" name="nome" placeholder="Nome completo" size="30" maxlength="" required>
-                            <br />
+                            <br/>
                             <label>Email:</label>
-                            <input type="email" id="mail" name="mail" size="30" maxlength="60" placeholder="Digite seu email" required />
-                            <br />
-                            <label>Telfone:</label>
-                            <input type="text" id="tel" name="tel" size="30" maxlength="15" placeholder="(XX) XXXXX-XXXX" required />
-                            <br />
+                            <input type="email" id="mail" name="mail" size="30" maxlength="60" placeholder="Digite seu email" required/>
+                            <br/>
+                            <label>Telefone:</label>
+                            <input type="text" id="tel" name="tel" size="30" maxlength="15" placeholder="(XX) XXXXX-XXXX" required/>
+                            <br/>
+                            <label>Idade:</label>
+                            <input type="number" id="idade" name="idade" maxlength="100" min="10" placeholder="Coloque sua Idade">
+                            <br/>
                             <label>Assunto:</label>
-                            <select id="estado" name="estado" required>
+                            <select id="assunto" name="assunto" required>
                                     <option value="" selected="selected">--Selecione--</option>
-                                    <optgroup label="Norte">
-                                        <option value="EL">Elogio</option>
-                                        <option value="DU">Duvida</option>
-                                        <option value="SU">Sugestão</option>
-                                        <option value="CR">Crítica</option>
-                                        <option value="OU">Outro</option>
-                                    </optgroup>
+                                        <option value="elo">Elogio</option>
+                                        <option value="duv">Duvida</option>
+                                        <option value="sug">Sugestão</option>
+                                        <option value="cri">Crítica</option>
+                                        <option value="out">Outro</option>
                                     <br/>
                             <label>Comentario:</label>
                             <textarea id="coment" name="coment" cols="40" rows="6" maxlength="240" placeholder="Digite seu comentário" required></textarea>
@@ -58,5 +61,16 @@
             </div>
         </article>
     </main>
+    <footer>
+        <div class="cont_footer">
+            <p>Pedro Cândido Vieira Mota &copy;</p>
+            <div class="redes_sociais">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-x"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
